# qsat

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py  schemas.py
app/core/: alert_engine.py  config.py  run_engine.py  run_logger.py
app/data/: parquet_reader.py  storage.py
app/integrations/: email_notifier.py  slack_client.py
app/persistence/: database.py
scripts/: generate_test_data.py
submission_artifacts/: preview_output.json  run_output.json
tests/: TEST_PLAN.md  conftest.py
tests/fixtures/: test_accounts.parquet
tests/integration/: test_full_flow.py
tests/unit/: test_alert_engine.py  test_database.py  test_database_sqlalchemy.py  test_parquet_reader.py  test_slack_client.py
